# FBX2md5

./: CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  generate_vs2022.bat
include/: anim_data.h  fbx2md5.h  fbx_loader.h  math_types.h  md5_exporter.h  mesh_data.h  skeleton.h
src/: anim_data.cpp  fbx2md5.cpp  fbx_loader.cpp  main.cpp  md5_exporter.cpp  mesh_data.cpp  skeleton.cpp
